# VideoAutoIndex

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  environment.yml  plan.txt  pyproject.toml  requirements.txt  run.sh  setup.py
VideoAutoIndexApp/: Package.swift  build.sh
VideoAutoIndexApp/VideoAutoIndexApp/: ContentView.swift  Info.plist  VideoAutoIndexApp.swift
src/: key_moments.py  main.py  transcriber.py  video_processor.py  web_generator.py
test_data/: audio_transcript.json  meeting_analysis.json  sample_audio.srt
tests/: conftest.py  test_key_moments.py  test_key_moments_integration.py  test_key_moments_sample.py  test_main.py  test_timestamps.py  test_transcriber.py  test_video_chapters.py  test_video_processor.py  test_web_generator.py
videos/: sample_summary.html
