[project]
name = "video-auto-index"
version = "0.1.0"
description = "Process meeting videos to extract key moments and takeaways"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg-python",
    "flask",
    "anthropic",
    "openai>=1.0.0",
    "requests",
    "beautifulsoup4",
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
addopts = "-v --cov=src --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: marks tests that require external services or full pipeline integration",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
